<resources>
    <string name="app_name">PERSONAL ACCOUNT API</string>
    <string name="action_settings">Settings</string>
    <string name="developed_By">Developed By:</string>
    <string name="srn_drawer_open">Open</string>
    <string name="srn_drawer_close">Close</string>
    <string name="srn_ex_no_menu_view">No view for menu provided. You must either call .withMenuView(View) or pass a valid resource id to .withMenuLayout(int)</string>
    <string name="srn_ex_bad_content_view">Your content view must contain exactly one child. Make sure you call inject() after setContentView().</string>
    <string name="success_message">Congratulation...Successfully Registered</string>
    <string name="error_ID_exists">User already exists</string>
    <string name="scan_message">Scan a Barcode or QR Code</string>
    <!-- Preference Titles -->

    <!-- About Preferences -->

    <!-- Update Preferences -->

    <!-- Feedback Preferences -->

    <!-- Version Preferences -->
    <string name="sendotp_key">ENTER KEY HERE</string>
    <string name="enterphonenumber">Enter your phone number</string>
    <string name="selectcountry">Select country</string>
    <string name="sending_sms">We\'re sending an sms to</string>
    <string name="inprogress">Verification in\nprogress</string>
    <string name="verified">Verification successful</string>
    <string name="failed">Verification failed</string>
    <string name="entercode">Please enter the code you received</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="hi">Hi!</string>
    <string name="proceed">Proceed</string>
    <string name="successful">Successful!</string>
    <string name="type_here_to_generate_qr">Type here to generate QR</string>
    <string name="realtime_qr_generator" translatable="false">Realtime QR generator view</string>
    <string name="button_scan_ocr" translatable="false">OCR to QR</string>
    <string name="regex" translatable="false"><![CDATA[[|?*<\":>+\\[\\]/\']]]></string>
    <string name="sdcard_permission_declined">Access to SD Card is not granted, the application cannot save QR Code</string>
    <string name="sdcard_permission_accepted">Access granted</string>
    <string name="folder_directory" translatable="false">/OCR to QR/</string>

    <!-- AdMob -->

    <!--    Update notification-->

    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <!-- [START fcm_default_icon_string] -->
    <!-- [END fcm_default_icon_string] -->

    <!--    Sound setting-->
    <string name="enable_sound" translatable="false">enable_sound</string>
    <string name="enable_vibrate" translatable="false">enable_vibrate</string>
    <string name="auto_scan" translatable="false">auto_scan</string>
    <string name="camera_list">camera_list</string>
    <string name="aboutus">Intelligent Contacts Solution LTD (ICS) was founded 2007 and is regulated by the communication Authority of Kenya as a content service provider. Our focus as an IT company is on It infrastructure and Software Development. MARIKITI is
    is a product of the e-commerce division of the company and was developed as a solution to support Micro, Small and Medium Enterprises(MSMEs),
    and Small and Medium Enterprises(SMEs) in Kenya. We truly believe that the future of business is in e-commerce</string>
    <string name="Vision">Our mission is to support MSMEs and SMEs into sustainable businesses using technology. Most businesses have relied on the traditional brick and mortar set up and the ‘need’ to stay local to keep them going. It is important for business men to learn about e-commerce (especially mobile e-commerce) because creating and supporting new businesses will soon rely heavily on online businesses. This is why we’ve created a platform that unites the business world and the community through software; to help these businesses grow every single day.</string>
    <string name="mision">We strive to be the largest e-commerce provider in Kenya, giving every single business a chance to grow and be sustainable irrespective of their location, size, ownership or financial background.</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="enter_user_number">Enter Phone Number</string>
    <string name="enter_4_digit_pin">Enter 4 digit Pin</string>
    <string name="register">Register</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="ics">\Developed by : @ics-kenya.com</string>
    <string name="enter_id_number">Enter Id Number</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="rgba_background_format" translatable="false">background-color:rgba(%1$d,%2$d,%3$d,%4$1f);</string>
    <string name="Termsandconditions">Terms An Conditions Agreement</string>
    <string name="Terms_and_conditions">Terms And Conditions Agreement</string>
    <string name="notices_title">Notices</string>
    <string name="notices_close">Close</string>
    <string name="notices_default_style">notice default</string>
    <string-array name="txtGroup">
        <item>-Select Account-</item>
        <item>My Account</item>
        <item>Bank Account</item>

    </string-array>
</resources>
