<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_200"
    android:padding="@dimen/margin_normal"
    tools:context=".ui.activities.PersonalDashboardActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_centerVertical="true"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/marikiti_logo" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/sans_regular"
            android:text="About Marikiti"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="normal" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/etnationalid"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:enabled="false"
                android:focusable="false"
                android:fontFamily="@font/sans_bold"
                android:padding="4dp"
                android:singleLine="false"
                android:text="@string/aboutus"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16dp" />


        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="VISION"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="horizontal">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:enabled="false"
                android:focusable="false"
                android:fontFamily="@font/sans_bold"
                android:padding="4dp"
                android:singleLine="false"
                android:text="@string/Vision"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16dp" />

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="MISION"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16dp" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:enabled="false"
                android:focusable="false"
                android:fontFamily="@font/sans_bold"
                android:padding="4dp"
                android:singleLine="false"
                android:text="@string/mision"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16dp" />

        </LinearLayout>


    </LinearLayout>
</ScrollView>
